--- a/.github/workflows/ubuntu-matrix.yml
+++ b/.github/workflows/ubuntu-matrix.yml
@@ -24,7 +24,7 @@ jobs:
   ubuntu-build_and_test:
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-20.04, ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: styfle/cancel-workflow-action@0.11.0
@@ -32,34 +32,16 @@ jobs:
         with:
           access_token: ${{ github.token }}
       - uses: actions/checkout@v3
-        fetch-depth: 0
-      - name: Restore deps
-        id: cache-deps-restore
-        uses: actions/cache/restore@v3
-        #if: ${{ !env.ACT }}
         with:
-          path: |
-            deps/git
-          key: ${{ runner.os }}-deps
-
-      - name: printenv
+          fetch-depth: '0'
+          submodules: 'recursive'
+          set-safe-directory: 'true'
+      - name: printenv && sudo apt update && sudo apt install scdoc cmake -y
         run: |
-          printenv && sudo apt-get update && \
-          apt-get install -y python3 make autoconf automake libtool build-essential tclsh gettext
-          touch ~/GH_ACT_TOKEN.txt
-
-      - name: deps/git
-        run: cd deps/git && autoreconf -i && ./configure && make && make install && cd ..
-
-      - name: deps/jq
-        run: cd deps/jq && autoreconf -i && ./configure  --disable-maintainer-mode && make install && cd ..
-
-      - name: Save deps
-        id: cache-deps-save
-        uses: actions/cache/save@v3
-        #if: ${{ !env.ACT }}
-        with:
-          path: |
-            deps/git
-          key: ${{ steps.cache-deps-restore.outputs.cache-primary-key }}
-
+          printenv && sudo apt update && sudo apt install scdoc cmake -y
+      - name: rm -rf deps
+        run: |
+          rm -rf deps
+      - name: cmake .
+        run: |
+          cmake . && make secp256k1 install
