--- a/.github/workflows/ubuntu-pre-release.yml
+++ b/.github/workflows/ubuntu-pre-release.yml
@@ -22,14 +22,17 @@ jobs:
         with:
           access_token: ${{ github.token }}
       - uses: actions/checkout@v3
-      - name: "printenv"
+        with:
+          fetch-depth: '0'
+          submodules: 'recursive'
+          set-safe-directory: 'true'
+      - name: printenv && sudo apt update && sudo apt install scdoc cmake -y
         run: |
-          printenv
+          printenv && sudo apt update && sudo apt install scdoc cmake -y
       - name: "Build pre-release"
         run: |
-          make submodules
-          make all
-          mv ./nostril ./nostril-$RUNNER_OS-$RUNNER_ARCH
+          cmake . && make secp256k1 all
+          mv nostril nostril-$RUNNER_OS-$RUNNER_ARCH
           shasum -a 256 nostril-$RUNNER_OS-$RUNNER_ARCH > nostril-$RUNNER_OS-$RUNNER_ARCH.sha256.txt
           mv nostril-query nostril-query-$RUNNER_OS-$RUNNER_ARCH
           shasum -a 256 nostril-query-$RUNNER_OS-$RUNNER_ARCH > nostril-query-$RUNNER_OS-$RUNNER_ARCH.sha256.txt
