--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,11 @@ scripts/subnote
 
 .DS_Store
 deps/.DS_Store
+
+CMakeCache.txt
+CMakeFiles/
+cmake_install.cmake
+
+ext/secp256k1/CTestTestfile.cmake
+ext/secp256k1/DartConfiguration.tcl
+ext/secp256k1/src/CTestTestfile.cmake
