--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ CMakeCache.txt
 CMakeFiles/
 cmake_install.cmake
 
+ext/secp256k1/INSTALL
 ext/secp256k1/CTestTestfile.cmake
 ext/secp256k1/DartConfiguration.tcl
 ext/secp256k1/src/CTestTestfile.cmake
